Atualização de novos jogos a lista

--- a/index.html
+++ b/index.html
@@ -38,8 +38,13 @@
                         </a>
                     </li>
                     <li>
-                        <a target="_blank" href="https://www.twitch.tv/directory/game/VALORANT">
-                        <img src="img/jogos/game-3.jpg" alt="Capa do jogo Valorant" class="img-jogo">
+                        <a target="_blank" href="https://www.twitch.tv/directory/game/Counter-Strike%3A%20Global%20Offensive">
+                        <img src="img/jogos/game-3.jpg" alt="Capa do jogo Cs" class="img-jogo">
+                        </a>
+                    </li>
+                    <li>
+                        <a target="_blank" href="https://www.twitch.tv/directory/game/Fortnite">
+                        <img src="img/jogos/game-4.jpg" alt="Capa do jogo Fortnite" class="img-jogo">
                         </a>
                     </li>
                 </ul> 
